fable/test/valid/save_1.f
      program prog
      save num
      write(6, *) num
      end
