fable/test/syntax_error/format_without_label.f
      program prog
	format(1x)
      end
